# freedom

./: .gitignore  AGENTS.md  CLAUDE.md  DAILY_TASK.md  DB.md  README.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: .env.example  Dockerfile  Dockerfile.base  pyproject.toml
backend/airflow/dags/: freedom_agent_daily_v1.py  freedom_data_integrity_weekly.py  freedom_market_data_daily.py
backend/app/: __init__.py  main.py
backend/app/airflow_sync/: dag_failure_alert.py  daily_sync_registry.py  feishu_alert.py  host_job_runner.py  trade_day_guard.py
backend/app/api/: deps.py  routers.py  stock_code.py
backend/app/audit/: __init__.py  adapters.py  airflow_runner.py  engine.py  models.py  registry.py  report_builder.py
backend/app/core/: cache.py  config.py  logging.py  security.py
backend/app/data/: __init__.py  duckdb_store.py  mongo_citic.py  mongo_citic_daily.py  mongo_market_index.py  parquet_store.py  tushare_client.py
backend/app/features/: __init__.py
backend/app/models/: __init__.py  daily_signal.py
backend/app/quant/: __init__.py  allocator.py  base.py  context.py  engine.py  execution.py  factors_market.py  factors_sector.py  factors_stock.py  metrics.py  params_registry.py  portfolio.py  registry.py
backend/app/repair/: p0_gap_repair.py
backend/app/schemas/: __init__.py  auth.py  stock_daily_stats.py  users.py
backend/scripts/: README-parquet-migration.md  compact_daily_parquet.py  compute_indicators.py  migrate_to_parquet.py  pull_daily_history.py  pull_stock_history.py  scheduler.py  tushare_test.py
docs/: api-capabilities.md  (+3 more)
(+279 files in other folders)
