[project]
name = "quant-platform-backend"
version = "0.1.0"
description = "Quant platform backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "duckdb>=0.10.0",
  "pandas>=2.2.0",
  "pyarrow>=14.0.0",
  "tushare>=1.4.0",
  "pydantic-settings>=2.2.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
